# solana-invariant-atlas

./: .gitignore  AI_DISCLOSURE.md  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
adopt/: PR_TEMPLATE.md  README.md  worked-example-log.md  workflow-template.yml
adopt/example/: README.md
adopt/example/emitted/: invariant_pending_receipts_conservation.rs
adopt/example/idl/: collateral_mint_ref.json
cases/jito/: CITATION.md
cases/jito-priorityfee/: CITATION.md
cases/jito-tippayment/: CITATION.md
cases/pyth/: CITATION.md
cases/z1-pyth-lazer-signature-integrity/: CITATION.md  LICENSE  README.md
cases/z1-pyth-lazer-signature-integrity/clean/pyth-lazer-solana-contract/: VENDOR_PROVENANCE.md
cases/z1-pyth-lazer-signature-integrity/planted/pyth-lazer-solana-contract/src/: lib.rs  signature.rs
cases/z1-pyth-lazer-signature-integrity/scripts/: build-both.sh  run-clean.sh  run-planted.sh  select-twin.sh
cases/z1-pyth-lazer-signature-integrity/tests/: Cargo.toml.clean  Cargo.toml.planted
cases/z1-pyth-lazer-signature-integrity/tests/src/: lib.rs
cases/z1-pyth-lazer-signature-integrity/tests/tests/: z1_invariant_signer_matches.rs  z1_signature_bypass.rs
cases/z1-pyth-lazer-signature-integrity/trident-tests/z1-signature-integrity/: Cargo.toml  Trident.toml
cases/z1-pyth-lazer-signature-integrity/trident-tests/z1-signature-integrity/src/: lib.rs
cases/z1-pyth-lazer-signature-integrity/trident-tests/z1-signature-integrity/src/flows/: invariant_signer_matches_ed25519.rs
ci/: reachability_leg.sh  reachability_seeds.txt
docs/: coverage_map.md  coverage_map_excerpt.md  design_notes.md  reachability.md  toolchain.md
docs/scorecards/: collateral_mint_ref_clean.md  collateral_mint_ref_planted.md
docs/scorecards/z1-pyth-lazer-signature-integrity/: z1_clean.md  z1_planted.md
references/collateral_mint_ref/fuzz/collateral_mint_ref/: Cargo.toml
references/collateral_mint_ref/fuzz/collateral_mint_ref/tests/: happy_path.rs
references/collateral_mint_ref/programs/collateral_mint_ref/: Cargo.toml
references/collateral_mint_ref/programs/collateral_mint_ref/src/: lib.rs
references/collateral_mint_ref/trident-tests/collateral_mint_ref/: Cargo.toml  Trident.toml
references/collateral_mint_ref_planted/: README.md
references/collateral_mint_ref_planted/fuzz/collateral_mint_ref/: Cargo.toml
references/collateral_mint_ref_planted/fuzz/collateral_mint_ref/crashes/invariant_collateral_authority/: crash_41b2daf47b5a30f4  crash_41b2daf47b5a30f4.meta.json  crash_5f34d8f4b1f82ed4  crash_5f34d8f4b1f82ed4.meta.json
references/collateral_mint_ref_planted/fuzz/collateral_mint_ref/src/: main.rs
references/collateral_mint_ref_planted/programs/collateral_mint_ref/src/: lib.rs
references/collateral_mint_ref_planted/trident-tests/collateral_mint_ref/src/: lib.rs
references/collateral_mint_ref_planted/trident-tests/collateral_mint_ref/src/flows/: invariant_collateral_authority.rs
scripts/: check-solana-pin.sh
